# dojobs

./: .gitmodules  README.md  dojobs.py  pyproject.toml  setup.py
src/: cli.py  execute.py
