[tool.poetry]
name = "src"
version = "0.0.1"
description = "Utility for quickly running many scripts."
authors = ["m8mble <m8mble@vivaldi.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
